fix: post content images overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -8,7 +8,8 @@ $fa-font-path: "~font-awesome/fonts";
 
 #post,
 #comment,
-#reply {
+#reply,
+.discussion-comments {
   img {
     height: auto;
     max-width: 100%;
